Switch to extension deployment

--- a/_extensions/aagi/aagi.css
+++ b/_extensions/aagi/aagi.css
@@ -29,10 +29,12 @@
 .quarto-title-authors {
   font-size: 28px;
 }
+
 .slides {
   border-bottom: #00808b 20px solid;
-  background-image: url(../img/logo.svg),  url(../img/footer.png);
-  background-size: 40%, 100%;
-  background-repeat: no-repeat;
+  background-image: url(../../../../../logo.svg),  url(../../../../../footer.png);
+  /*background-size: 100%, 100%; */
   background-position: 120% -230%, bottom;
+  background-repeat: no-repeat;
+  background-size: contain;
 }
