--- a/_extensions/aagi/aagi.scss
+++ b/_extensions/aagi/aagi.scss
@@ -49,14 +49,14 @@ $font-family-monospace: "Fira Code";
   font-size: 28px;
 }
 
-.reveal .slide-logo {
-  top: 0;
-  left: 12px
-}
-
-.mainlogo {
-    width: 100%;
-    height: 100%;
-    background-image: url(logo.svg);
-    background-position: 50% 50%;
+.reveal .footer {
+  color: #ffffff;
+  background-color: $aagi-teal;
+  text-align: right;
+  display: block;
+  position: fixed;
+  padding-bottom: 12px;
+  padding-top: 12px;
+  bottom: 5% !important; // Makes footer div flush with bottom of slide
+  z-index: -99 !important; // Sets the footer div further down the z-index
 }
