Update logo position

--- a/_extensions/aagi/aagi.scss
+++ b/_extensions/aagi/aagi.scss
@@ -60,3 +60,10 @@ $font-family-monospace: "Fira Code";
   bottom: 5% !important; // Makes footer div flush with bottom of slide
   z-index: -99 !important; // Sets the footer div further down the z-index
 }
+
+.reveal .slides {
+  background-image: url(logo.svg);
+  background-repeat: no-repeat;
+  background-size: contain;
+  background-position: top right;
+}
