Add closing slide w/ title image and references slide holder

--- a/_extensions/aagi/aagi.scss
+++ b/_extensions/aagi/aagi.scss
@@ -57,6 +57,7 @@ $font-family-monospace: "Fira Code";
   position: fixed;
   padding-bottom: 12px;
   padding-top: 12px;
+  margin-bottom: 5px;
   bottom: 5% !important; // Makes footer div flush with bottom of slide
   z-index: -99 !important; // Sets the footer div further down the z-index
 }
