--- a/_extensions/aagi/aagi.scss
+++ b/_extensions/aagi/aagi.scss
@@ -8,14 +8,23 @@
 
 // define AAGI colours
 
-$aagi-black: #414042;
-$aagi-blue: #648fd2;
-$aagi-bright-green: #b6d438;
-$aagi-green: #54921e;
-$aagi-grey: #f2f2f2;
-$aagi-orange: #ec8525;
-$aagi-teal: #00808b;
-$aagi-yellow: #ffbc42;
+$colors (
+  "aagi-black": #414042,
+  "aagi-blue": #648fd2,
+  "aagi-bright-green": #b6d438,
+  "aagi-green": #54921e,
+  "aagi-grey": #f2f2f2,
+  "aagi-orange": #ec8525,
+  "aagi-teal": #00808b,
+  "aagi-yellow": #ffbc42,
+)
+
+// functions
+// From Emil Hvitfeldt, https://emilhvitfeldt.com/post/slidecraft-scss-uses/
+@function theme-color($color) {
+  @return map-get($colors, $color);
+}
+//
 
 // colours
 
@@ -62,10 +71,12 @@ $font-family-monospace: "Fira Code";
   z-index: -99 !important; // Sets the footer div further down the z-index
 }
 
-.reveal table, th, td {
+.reveal table,
+th,
+td {
   border: 2px solid #ffffff;
   background: $aagi-grey;
-  color: $aagi-black
+  color: $aagi-black;
 }
 
 .reveal table th {
