--- a/_extensions/aagi/aagi.scss
+++ b/_extensions/aagi/aagi.scss
@@ -8,20 +8,19 @@
 
 // define AAGI colours
 
-$colors (
-  "aagi-black": #414042,
-  "aagi-blue": #648fd2,
-  "aagi-bright-green": #b6d438,
-  "aagi-green": #54921e,
-  "aagi-grey": #f2f2f2,
-  "aagi-orange": #ec8525,
-  "aagi-teal": #00808b,
-  "aagi-yellow": #ffbc42,
-)
-
-// functions
-// From Emil Hvitfeldt, https://emilhvitfeldt.com/post/slidecraft-scss-uses/
-@function theme-color($color) {
+$colors: (
+    "aagi-black": #414042,
+    "aagi-blue": #648fd2,
+    "aagi-bright-green": #b6d438,
+    "aagi-green": #54921e,
+    "aagi-grey": #f2f2f2,
+    "aagi-orange": #ec8525,
+    "aagi-teal": #00808b,
+    "aagi-yellow": #ffbc42,
+  )
+  // functions
+  // From Emil Hvitfeldt, https://emilhvitfeldt.com/post/slidecraft-scss-uses/
+  @function theme-color($color) {
   @return map-get($colors, $color);
 }
 //
