Enclose Arial in dquotes

--- a/_extensions/aagi/aagi.scss
+++ b/_extensions/aagi/aagi.scss
@@ -33,7 +33,7 @@ $body-color: theme-color("aagi-black") !default;
 
 // fonts
 
-$font-family-sans-serif: "Proxima Nova", Arial;
+$font-family-sans-serif: "Proxima Nova", "Arial";
 $font-family-monospace: "Fira Code";
 
 /*-- scss:rules --*/
