better font handling in scss

--- a/_extensions/aagi/aagi.scss
+++ b/_extensions/aagi/aagi.scss
@@ -28,18 +28,18 @@ $colors: (
 // colours
 
 $link-color: theme-color("aagi-teal") !default;
-$link-hover: theme-color("aagi-bright-green") !default;
 $body-color: theme-color("aagi-black") !default;
 
 // fonts
 
-$headingFont: "Proxima Nova", Arial;
-$heading1Size: 44px;
-$heading2Size: 40px;
-$heading3Size: 38px;
-$mainFont: "Proxima Nova", Arial;
-$mainFontSize: 28px;
-$codeFont: "Fira Code";
+$font-family-sans-serif: "Proxima Nova", Arial;
+$font-family-monospace: "Fira Code";
+
+$presentation-h1-font-size: 44px;
+$presentation-h2-font-size: 40px;
+$presentation-h3-font-size: 38px;
+$presentation-font-size-root: 28px;
+
 
 /*-- scss:rules --*/
 
