Use em rather than px for font sizes

--- a/_extensions/aagi/aagi.scss
+++ b/_extensions/aagi/aagi.scss
@@ -35,10 +35,10 @@ $body-color: theme-color("aagi-black") !default;
 $font-family-sans-serif: "Proxima Nova", Arial;
 $font-family-monospace: "Fira Code";
 
-$presentation-h1-font-size: 44px;
-$presentation-h2-font-size: 40px;
-$presentation-h3-font-size: 38px;
-$presentation-font-size-root: 28px;
+$presentation-h1-font-size: 2em;
+$presentation-h2-font-size: 1.75em;
+$presentation-h3-font-size: 1.5em;
+$presentation-font-size-root: 2em;
 
 
 /*-- scss:rules --*/
