clean up column text and style aside text

--- a/_extensions/aagi/aagi.scss
+++ b/_extensions/aagi/aagi.scss
@@ -75,3 +75,8 @@ td {
   color: #ffffff;
   background:theme-color("aagi-teal");
 }
+
+.aside {
+  font-size: 0.25em;
+  colour: theme-color("aagi-grey")
+}
