Fix spelling of color and add .caption class

--- a/_extensions/aagi/aagi.scss
+++ b/_extensions/aagi/aagi.scss
@@ -76,7 +76,7 @@ td {
   background:theme-color("aagi-teal");
 }
 
-.aside {
+.reveal .aside .caption {
   font-size: 0.25em;
-  colour: theme-color("aagi-grey")
+  color: theme-color("aagi-grey")
 }
