Caption styling doesn't work

--- a/_extensions/aagi/aagi.scss
+++ b/_extensions/aagi/aagi.scss
@@ -76,7 +76,7 @@ td {
   background:theme-color("aagi-teal");
 }
 
-.reveal .aside .caption {
+.reveal .aside {
   font-size: 0.25em;
   color: theme-color("aagi-grey")
 }
