--- a/_extensions/aagi/revealjs/aagi.scss
+++ b/_extensions/aagi/revealjs/aagi.scss
@@ -83,6 +83,6 @@ td {
 
 .reveal .slide-logo {
   width: 180px !important;
-  max-width: unset !important;
-  max-height: unset !important;
+  bottom: -2px;
+  right: 10px;
 }
