--- a/_extensions/aagi/revealjs/aagi.scss
+++ b/_extensions/aagi/revealjs/aagi.scss
@@ -83,6 +83,6 @@ td {
 
 .reveal .slide-logo {
   max-width: 180px !important;
-  bottom: -2px;
-  right: 10px;
+  width: 180px !important;
+  height: auto;
 }
