--- a/_extensions/aagi/revealjs/aagi.scss
+++ b/_extensions/aagi/revealjs/aagi.scss
@@ -82,7 +82,7 @@ td {
 }
 
 .reveal .slide-logo {
-  max-width: 180px !important;
-  width: 180px !important;
+  max-height: 5.375em !important;
+  max-width: 11.25em !important;
   height: auto;
 }
