--- a/_extensions/aagi/revealjs/aagi.scss
+++ b/_extensions/aagi/revealjs/aagi.scss
@@ -82,5 +82,15 @@ td {
 }
 
 .reveal .slide-logo {
+  position: absolute;
+  top: 10px;
+  right: 10px;
   max-height: 86px !important;
+}
+
+.reveal .slide-number {
+  position: absolute;
+  bottom: 10px !important;
+  right: 10px !important;
+  top: unset !important;
 }
